Implement logging, add exception handler, cancel button